--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TEXT</title>
-</head>
 
+    <style>
+    .box{
+        width: 300px;
+    }
+    </style>
+
+
+</head>
 <body>
-    <h1>TEXT</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut animi, vel magnam vitae debitis totam maxime
-        minus natus quibusdam earum nulla omnis necessitatibus sequi distinctio, eos culpa adipisci qui.
-    </p>
+    <div class="box">
+        <h1>TEXT</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut animi, vel magnam vitae debitis totam
+            maxime
+            minus natus quibusdam earum nulla omnis necessitatibus sequi distinctio, eos culpa adipisci qui.
+        </p>
+
+    </div>
+
 
 </body>
 
