--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>TEXT</title>
 
     <style>
-    .box{
-        width: 300px;
-    }
+        .box {
+            width: 300px;
+        }
     </style>
 
 
 </head>
+
 <body>
     <div class="box">
         <h1>TEXT</h1>
@@ -22,7 +23,14 @@
             maxime
             minus natus quibusdam earum nulla omnis necessitatibus sequi distinctio, eos culpa adipisci qui.
         </p>
+    </div>
 
+    <div class="box">
+        <h1>TEXT</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut animi, vel magnam vitae debitis totam
+            maxime
+            minus natus quibusdam earum nulla omnis necessitatibus sequi distinctio, eos culpa adipisci qui.
+        </p>
     </div>
 
 
