--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TEXT</title>
+    <link rel="stylesheet" href="/css/lightbox.css">
 
     <style>
         .box {
@@ -32,6 +33,9 @@
             minus natus quibusdam earum nulla omnis necessitatibus sequi distinctio, eos culpa adipisci qui.
         </p>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/lightbox.min.js"></script>
 
 
 </body>
