--- a/index.html
+++ b/index.html
@@ -5,12 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TEXT</title>
+
     <link rel="stylesheet" href="/css/lightbox.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/css/swiper.min.css">
+
+    <title>TEXT</title>
 
     <style>
         .box {
             width: 300px;
+        }
+
+        .Img {
+            width: 80px;
+            height: 300px;
+            background-image: url('https://2.bp.blogspot.com/-Zy5RZ5U_fd0/VzC4RkZs9hI/AAAAAAAADXU/weChRJc-e0Q7lwBeNvFZQvFy8c7WZcpigCLcB/s1600/tumblr_o3fs6c4Qts1v296kfo5_1280.jpg');
+            background-position: 60% 40%;
+        }
+
+        .Img2 {
+            width: 80px;
+            height: 300px;
+            background-image: url('https://cdn.hk01.com/di/media/images/991639/org/c31c3af5579d758e87ab814174f07a60.jpg/Kdmx7gBVnvSXx7CktyPSACQQmQoCrH8jns2kW57NpFs?v=w1920r16_9');
+            background-position: 50% 40%;
+        }
+
+        body {
+            background: #fff;
+            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            color:#000;
+            margin: 0;
+            padding: 0;
+        }
+        .swiper-container {
+            width: 100%;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        .swiper-slide {
+            background-position: center;
+            background-size: cover;
+            width: 300px;
+            height: 300px;
         }
     </style>
 
@@ -34,8 +73,89 @@
         </p>
     </div>
 
+    <a href="https://2.bp.blogspot.com/-Zy5RZ5U_fd0/VzC4RkZs9hI/AAAAAAAADXU/weChRJc-e0Q7lwBeNvFZQvFy8c7WZcpigCLcB/s1600/tumblr_o3fs6c4Qts1v296kfo5_1280.jpg"
+        data-lightbox="image-1" data-title="一拳超人">
+        <img class="Img">
+    </a>
+
+    <a href="https://cdn.hk01.com/di/media/images/991639/org/c31c3af5579d758e87ab814174f07a60.jpg/Kdmx7gBVnvSXx7CktyPSACQQmQoCrH8jns2kW57NpFs?v=w1920r16_9"
+        data-lightbox="image-1" data-title="超人">
+        <img class="Img2">
+    </a>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Launch demo modal
+    </button>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="mb-3">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" style="background-image:url(https://i.ytimg.com/vi/54fO2dgvuBY/maxresdefault.jpg)">
+                    <!-- <img src="https://i.ytimg.com/vi/54fO2dgvuBY/maxresdefault.jpg" alt=""> -->
+                </div>
+                <div class="swiper-slide" style="background-image:url(http://4.bp.blogspot.com/-MtEeGFzYfjo/VmJxuLDzGtI/AAAAAAAADd4/KnwI-WDs-WI/s1600/48eb84af5c501.jpg)">
+                    <!-- <img src="http://4.bp.blogspot.com/-MtEeGFzYfjo/VmJxuLDzGtI/AAAAAAAADd4/KnwI-WDs-WI/s1600/48eb84af5c501.jpg" alt=""> -->
+                </div>
+            </div>
+    </section>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/js/lightbox.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
+    <script>
+        lightbox.option({
+            'resizeDuration': 200,
+            'wrapAround': true,
+            'fadeDuration': 300,
+        })
+
+        var swiper = new Swiper('.swiper-container', {
+            effect: 'coverflow',
+            grabCursor: true,
+            centeredSlides: true,
+            slidesPerView: 'auto',
+            coverflowEffect: {
+                rotate: 50,
+                stretch: 0,
+                depth: 100,
+                modifier: 1,
+                slideShadows: true,
+            },
+            pagination: {
+                el: '.swiper-pagination',
+            },
+        });
+    </script>
 
 
 </body>
